# MIFCG-AI

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  supabase-migrate.yml
backend/: .env.example  fly.toml  koyeb.yaml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  limiter.py  redis.py  supabase.py
backend/app/routers/: bursa_risk.py  fxwatch.py  health.py  regcomply.py  survival_pro.py
backend/tests/: conftest.py  test_auth.py  test_fxwatch.py  test_health.py  test_regcomply.py  test_survival_pro.py
frontend/: .dev.vars.example  Dockerfile  netlify.toml  next.config.ts  open-next.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useSSEStream.ts
frontend/src/lib/: api.ts  utils.ts
src/mifcg_ai/: __init__.py  core.py
stitch-screens/code/: 01-fxwatch-institutional-monitor.html  02-regcomply-ai-document-workspace.html  03-unified-command-center.html  04-design-system.html  05-bajet-pro-support-portal.html  06-bajet-pro-assistant.html  07-bajet-pro-mobile-dashboard-1.html  08-fxwatch-live-mobile-monitor.html  09-bajet-pro-mobile-dashboard-2.html  10-regcomply-ai-mobile-workspace.html  11-bursa-factor-interactive-analytics.html  12-bursa-factor-mobile-analytics.html  13-interactive-bursa-factor-analytics.html
supabase/migrations/: 001_initial_schema.sql  002_fix_admin_rls_recursion.sql
tests/: test_core.py
(+38 files in other folders)
